<resources>
    <string name="app_name">VForum</string>
    <string name="signup">Have you an account?</string>
    <string name="btnsignup">Sign Up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="description">description</string>
    <string name="todo">TODO</string>
    ]
    <string name="_10">10</string>
    <string name="name">david</string>
    <string name="waiting">Waiting...</string>
</resources>