<?xml version="1.0" encoding="utf-8"?>
<com.chauthai.swipereveallayout.SwipeRevealLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/swipe"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:dragEdge="right"
    app:mode="same_level">

    <RelativeLayout
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtEdit"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/noirpro_medium"
            android:gravity="center"
            android:text="@string/edit"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/txtDelete"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtEdit"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/noirpro_medium"
            android:gravity="center"
            android:text="@string/delete"
            android:textAlignment="center"
            android:textColor="#F44336" />

        <TextView
            android:id="@+id/txtDelete_admin"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/noirpro_medium"
            android:gravity="center"
            android:text="@string/delete"
            android:textAlignment="center"
            android:textColor="#F44336" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/avatar"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:layout_toEndOf="@id/avatar"
            android:fontFamily="@font/noirpro_medium"
            android:text="@string/description"
            android:textColor="@color/colorPrimary" />

        <ImageView
            android:id="@+id/active"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="32dp"
            android:layout_toEndOf="@id/tv_username"
            android:src="@drawable/active_off"
            android:contentDescription="@string/todo" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="5dp"
            android:layout_toStartOf="@id/tv_count_like"
            android:src="@drawable/heart_empty"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/tv_count_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="28dp"
            android:fontFamily="@font/noirpro_medium"
            android:text="@string/_10"
            android:textColor="#000" />

        <TextView
            android:id="@+id/tv_des_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/avatar"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/noirpro_regular"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:text="@string/name"
            android:textColor="#000" />
    </RelativeLayout>
</com.chauthai.swipereveallayout.SwipeRevealLayout>